--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev:frontend": "vite",
     "dev:backend": "tsx --env-file=.env server/index.ts",
     "dev": "concurrently \"npm:dev:frontend\" \"npm:dev:backend\"",
-    "build": "tsc && vite build",
+    "build": "vite build",
+    "build:check": "tsc && vite build",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "db:push": "drizzle-kit push"
