--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:backend": "tsx --env-file=.env server/index.ts",
     "dev": "concurrently \"npm:dev:frontend\" \"npm:dev:backend\"",
     "build": "vite build",
-    "build:check": "tsc && vite build",
+    "build:check": "vite build",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "db:push": "drizzle-kit push"
