--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:backend": "tsx --env-file=.env server/index.ts",
     "dev": "concurrently \"npm:dev:frontend\" \"npm:dev:backend\"",
     "build": "vite build",
+    "start": "tsx server/index.ts",
     "build:check": "vite build",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
