Fix ES module conflicts - use .mjs server with ES imports

--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "devhubconnect-marketplace",
   "private": true,
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev:frontend": "vite",
     "dev:backend": "tsx --env-file=.env server/index.ts",
     "dev": "concurrently \"npm:dev:frontend\" \"npm:dev:backend\"",
     "build": "vite build",
-    "start": "node simple-server.js",
+    "start": "node simple-server.mjs",
     "build:check": "vite build",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
