--- a/package.json
+++ b/package.json
@@ -58,12 +58,15 @@
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "express-rate-limit": "^8.0.1",
+    "express-session": "^1.18.2",
     "helmet": "^8.1.0",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.400.0",
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "pg": "^8.16.3",
     "pg-core": "^0.1.15",
     "react": "^18.3.1",
