--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^8.0.1",
     "express-session": "^1.18.2",
+    "groq-sdk": "^0.30.0",
     "helmet": "^8.1.0",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
