🔧 Clean package.json: Remove conflicting dependencies, fix dual-server setup

--- a/package.json
+++ b/package.json
@@ -4,15 +4,11 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev:frontend": "vite",
-    "dev:backend": "tsx --env-file=.env server/index.ts",
-    "dev": "concurrently \"npm:dev:frontend\" \"npm:dev:backend\"",
+    "dev": "vite",
     "build": "vite build",
     "start": "node simple-server.mjs",
-    "build:check": "vite build",
-    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "db:push": "drizzle-kit push"
+    "lint": "eslint . --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.11",
@@ -44,10 +40,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@stripe/stripe-js": "^7.4.0",
     "@tanstack/react-query": "^5.51.1",
-    "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.2",
-    "body-parser": "^2.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -55,22 +48,15 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
-    "drizzle-orm": "^0.32.2",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "express-rate-limit": "^8.0.1",
-    "express-session": "^1.18.2",
     "groq-sdk": "^0.30.0",
-    "helmet": "^8.1.0",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.400.0",
     "next-themes": "^0.3.0",
-    "node-fetch": "^3.3.2",
-    "passport": "^0.7.0",
-    "passport-github2": "^0.1.12",
     "pg": "^8.16.3",
-    "pg-core": "^0.1.15",
     "react": "^18.3.1",
     "react-day-picker": "^9.8.1",
     "react-dom": "^18.3.1",
@@ -84,33 +70,21 @@
     "stripe": "^18.4.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript-eslint": "^8.39.0",
     "vaul": "^1.1.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/body-parser": "^1.19.6",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.23",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20.14.10",
-    "@types/node-fetch": "^2.6.12",
-    "@types/pg": "^8.11.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.19",
-    "concurrently": "^8.2.2",
-    "drizzle-kit": "^0.31.4",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
-    "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "vite": "^7.0.6"
   }
