--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "start": "node simple-server.mjs",
+    "build": "tsc && vite build",
+    "start": "node dist/index.js",
     "preview": "vite preview",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0"
   },
@@ -40,6 +40,12 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@stripe/stripe-js": "^7.4.0",
     "@tanstack/react-query": "^5.51.1",
+    "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.14.10",
+    "@types/pg": "^8.11.6",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -70,6 +76,7 @@
     "stripe": "^18.4.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.8.3",
     "vaul": "^1.1.2",
     "zod": "^3.23.8"
   },
@@ -85,7 +92,6 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.8.3",
     "vite": "^7.0.6"
   }
 }
