--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,10 @@
 [build]
 builder = "nixpacks"
-buildCommand = "npm install && npm run build"
+buildCommand = "npm install --omit=dev && npm run build"
+nixpacksPlan = """
+[phases.setup]
+nixPkgs = ['nodejs-22.12.0']
+"""
 
 [deploy]
 restartPolicyType = "on_failure"
